# HumanGPT

./: .env.example  AiQueries.md  AiQueries.txt  Cargo.toml  README.md
html-client/: index.html  package-lock.json  package.json  script.js  style.css
prompts_importer/: Cargo.toml
prompts_importer/src/: main.rs
src/: main.rs
