[package]
name = "HumanGPT"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenv = "0.15.0"
reqwest = "0.13.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["fs"] }
